src/main/istio/dest-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: weather-service
spec:
    host: weather-service
    subsets:
        - labels:
              version: v1
          name: v1
        - labels:
              version: v2
          name: v2
