src/main/istio/oco-weather-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-service 
spec:
  hosts:
  - "weather.com"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /weather
    route:
    - destination:
        subset: v1
        port:
          number: 8080 
        host: weather-service
      weight: 100
    mirror:
      host: weather-service
      subset: v2
