src/main/istio/oraclecodeone-weather-pathroute.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-service 
spec:
  hosts:
  - "weather.com"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /weather
    route:
    - destination:
        port:
          number: 8080 
        host: weather-service
