src/main/istio/oraclecodeone-weather-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-service 
spec:
  hosts:
    - "weather.com"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: weather-service 
            port:
              number: 8080
